[package]
name = "emul8"
description = "A simple rust-based toolchain to interoperate and emulate the CHIP-8 architecture"
homepage = "https://github.com/MeFisto94/emul8"
repository = "https://github.com/MeFisto94/emul8"
version = "0.1.2"
authors = ["Marc Streckfuß <marc.streckfuss@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
pest = "2.1.3"
pest_derive = "2.1.0"
downcast-rs = "1.1.1"

[build-dependencies]
generic-array = "0.12.4" # Override deep dependency from pest, because of CVE-2020-36465
